# clang-tidy-tls-checks

./: .clang-tidy  .gitignore  LICENSE  README.md  codechecker.json
demo/: compile_commands.json
demo/bad/: disable_verify.c  disable_verify_ssl.c  insecure_client_method.c  insecure_method.c
demo/expected/: README.md
demo/good/: tls_client_method.c  tls_method.c  verify_peer.c  verify_peer_ssl.c
docs/: 00-mvt.md  01-taxonomy-mvds.md  02-toolchain.md  03-demo-plan.md  04-limitations.md
evaluated_libraries/: README.md
evaluated_libraries/chipmunk2d/include/chipmunk/: cpArbiter.h  cpShape.h
evaluated_libraries/libuv/include/: uv.h
evaluated_libraries/raylib/src/: raylib.h  rshapes.c
evaluated_libraries/zlib/: zlib.h
include/: trust_boundary.h
scripts/: build.sh  collect_metrics.py  reproduce_all.sh  run_codechecker.sh  run_demo.sh
src/: CMakeLists.txt
src/checks/: DisableVerifyCheck.cpp  DisableVerifyCheck.h  InsecureProtocolMethodCheck.cpp  InsecureProtocolMethodCheck.h  ModuleLoadedCheck.cpp  ModuleLoadedCheck.h  TrustBoundaryPaddingLeakCheck.cpp  TrustBoundaryPaddingLeakCheck.h
src/module/: SecurityMiscModule.cpp  TlsChecksModule.cpp
synthetic_benchmarks/cross_family/: tb_representation_leak_crypto.c
synthetic_benchmarks/trust_boundary/: benchmarks.c
